--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Voting Online</title>
 </head>
     <body>
         <div id="index">
             <div class="container mx-auto pt-24 pb-1 px-32">
                 <nav class="bg-black-100 flex space-x-4">
-                    <a href="index.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600  cursor-pointer">Home</h3></a>
-                    <a href="candidates1.html"><h3 class="p-1  hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
-                    <a href="howtovote.html"><h3 class="p-1 hover:text-red-600 cursor-pointer">How to Vote</h3></a>
-                    <a href="vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
+                    <a href="public/index.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600  cursor-pointer">Home</h3></a>
+                    <a href="public/candidates1.html"><h3 class="p-1  hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
+                    <a href="public/howtovote.html"><h3 class="p-1 hover:text-red-600 cursor-pointer">How to Vote</h3></a>
+                    <a href="public/vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
                 </nav>
                 <div class="py-12">
                     <div class="flex justify-between">
@@ -35,10 +35,10 @@
                 </div>
             </div>
             <div class="flex">
-                <img src="../assets/pictures/rectangles1.jpg" alt="rectangles 1" class="h-44 2xl:h-64 w-auto">
+                <img src="assets/pictures/rectangles1.jpg" alt="rectangles 1" class="h-44 2xl:h-64 w-auto">
                 <div class="flex absolute h-2/5 2xl:bottom-0 left-1/4">
-                    <img src="../assets/pictures/candidate1.png" alt="candidates 1" class="w-auto">
-                    <img src="../assets/pictures/candidate2.png" alt="candidates 2" class="w-auto">
+                    <img src="assets/pictures/candidate1.png" alt="candidates 1" class="w-auto">
+                    <img src="assets/pictures/candidate2.png" alt="candidates 2" class="w-auto">
                 </div>
             </div>
         </div>
