--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
                         <p class="italic font-light">Please to be wise voter!</p>
                     </div>
                     <div class="ml-20 2xl:ml-32">
-                        <form action="#" class="space-y-4">
+                        <form action="vote.html" class="space-y-4">
                             <label class="block tracking-wide text-xl font-bold mb-2">
                                 Login
                             </label>
