--- a/public/double-check.html
+++ b/public/double-check.html
@@ -14,8 +14,8 @@
             <h1 class="text-7xl font-bold text-center">Are you sure with your answer?</h1>
             <h2 class="text-2xl text-center">All participant only can vote 1 time</h2>
             <div class="flex justify-center space-x-10">
-                <a href="#"><button class="py-2 px-6 bg-white border border-gray-300 text-gray-300 text-xl rounded-lg hover:bg-gray-400 hover:text-black hover:scale-110 transform transition-all cursor-pointer">I'm not sure</button></a>
-                <a href="#"><button class="py-2 px-6 font-bold text-xl rounded-lg bg-red-100 text-red-600 hover:bg-red-300 hover:scale-110 transform transition-all cursor-pointer">Absolutely yes!</button></a>
+                <a href="vote.html"><button class="py-2 px-6 bg-white border border-gray-300 text-gray-300 text-xl rounded-lg hover:bg-gray-400 hover:text-black hover:scale-110 transform transition-all cursor-pointer">I'm not sure</button></a>
+                <a href="result.html"><button class="py-2 px-6 font-bold text-xl rounded-lg bg-red-100 text-red-600 hover:bg-red-300 hover:scale-110 transform transition-all cursor-pointer">Absolutely yes!</button></a>
             </div>
         </div>
     </div>
