--- a/public/error-state.html
+++ b/public/error-state.html
@@ -21,7 +21,7 @@
             <h1 class="text-7xl font-bold text-center">Oops!</h1>
             <h2 class="text-2xl text-center">You haven't voted yet, please choose one candidate.</h2>
             <div class="flex justify-center">
-                <a href="#"><button class="py-2 px-10 font-bold text-xl rounded-lg bg-red-100 text-red-600 hover:bg-red-300 hover:scale-110 transform transition-all cursor-pointer">Okay</button></a>
+                <a href="vote.html"><button class="py-2 px-10 font-bold text-xl rounded-lg bg-red-100 text-red-600 hover:bg-red-300 hover:scale-110 transform transition-all cursor-pointer">Okay</button></a>
             </div>
         </div>
     </div>
