--- a/public/howtovote.html
+++ b/public/howtovote.html
@@ -17,7 +17,7 @@
         </div>
         <div class="container mx-auto pt-24 pb-1 px-32">
             <nav class="bg-black-100 flex space-x-4">
-                <a href="index.html"><h3 class="p-1 hover:text-red-600  cursor-pointer">Home</h3></a>
+                <a href="../index.html"><h3 class="p-1 hover:text-red-600  cursor-pointer">Home</h3></a>
                 <a href="candidates1.html"><h3 class="p-1  hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
                 <a href="howtovote.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600 cursor-pointer">How to Vote</h3></a>
                 <a href="vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
