--- a/public/result.html
+++ b/public/result.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container mx-auto pt-12 2xl:pt-24 pb-1 px-32 mt-16">
             <div class="flex justify-end">
-                <a href="#"><img src="../assets/pictures/next.png" alt="Next" class="hover:scale-105 transform transition-all cursor-pointer"></a>
+                <a href="vote.html"><img src="../assets/pictures/next.png" alt="Next" class="hover:scale-105 transform transition-all cursor-pointer"></a>
             </div>
             <div class="grid grid-cols-2 gap-4">
                 <div>
