--- a/public/vote.html
+++ b/public/vote.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container mx-auto pt-12 2xl:pt-24 pb-1 px-32 mt-10">
             <nav>
-                <p class="text-right text-sm underline text-gray-400 font-light cursor-pointer">Log Out</p>
+                <a href="../index.html"><p class="text-right text-sm underline text-gray-400 font-light cursor-pointer hover:text-gray-600 transition-all">Log Out</p></a>
             </nav>
             <div class="space-y-2">
                 <h1 class="text-4xl font-bold text-center">Hello, <span class="text-red-600">Charles</span>!</h1>
@@ -51,9 +51,9 @@
                     <div class="border mx-4 py-1 border-black bg-gray-800 opacity-80">
                         <h1 class="text-center font-bold text-white text-2xl">2</h1>
                     </div>
-                    <div class="mx-4 border border-black cursor-pointer h-3/4 overflow-hidden">
+                    <div class="mx-4 border border-black cursor-pointer h-3/4 overflow-hidden relative">
                         <img src="../assets/pictures/candidate2_2.png" alt="Candidate 2" class="w-full h-full pt-28 opacity-80 hover:scale-110 hover:opacity-100 transform transition-all">
-                        <div class="bg-red-600 py-4 w-full bottom-1/4 hidden">
+                        <div class="bg-red-600 py-4 w-full bottom-0 absolute opacity-0">
                             <p class="text-center text-white font-light text-sm">selected</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                 <div></div>
             </div>
             <div class="flex justify-center mt-20">
-                <button class="bg-red-200 cursor-pointer py-2 px-16 uppercase font-bold text-xl text-red-600 rounded-lg hover:bg-red-300 transition-all">Vote</button>
+                <a href="double-check.html"><button class="bg-red-200 cursor-pointer py-2 px-16 uppercase font-bold text-xl text-red-600 rounded-lg hover:bg-red-300 transition-all">Vote</button></a>
             </div>
         </div>
         <div class="mt-20 flex justify-end mr-40">
