--- a/public/howtovote.html
+++ b/public/howtovote.html
@@ -6,35 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../transition.css"/>
     <title>Voting Online</title>
 </head>
     <body>
         <div class="absolute right-0">
-            <img src="../assets/pictures/square3.png" alt="Square 3" class="w-2/3">
+            <img src="../assets/pictures/square3.png" alt="Square 3" class="w-2/3 animate__animated animate__fadeInDown">
         </div>
         <div class="absolute left-0 bottom-16">
-            <img src="../assets/pictures/square2.png" alt="Square 2" class="w-2/3">
+            <img src="../assets/pictures/square2.png" alt="Square 2" class="w-2/3 animate__animated animate__fadeInLeft">
         </div>
         <div class="container mx-auto pt-24 pb-1 px-32">
             <nav class="bg-black-100 flex space-x-4">
                 <a href="../index.html"><h3 class="p-1 hover:text-red-600  cursor-pointer">Home</h3></a>
                 <a href="candidates1.html"><h3 class="p-1  hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
                 <a href="howtovote.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600 cursor-pointer">How to Vote</h3></a>
-                <a href="vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
+                <a href="login.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
             </nav>
-            <div class="grid justify-items-center mt-16">
+            <div class="grid justify-items-center mt-16 animate__animated animate__fadeInDown">
                 <h1 class="font-bold text-4xl">A few steps to <span class="text-red-600">vote.</span></h1>
             </div>
             <div class="grid grid-cols-5 mt-16 mb-10">
-                <div class="col-span-2 w-4/5">
+                <div class="col-span-2 w-4/5 animate__animated animate__fadeInDown animate__delay-1s">
                     <h3 class="font-bold text-xl mb-2">Open the Vote Platform</h3>
                     <p>Open the vote platform at www.electionvote.com</p>
                 </div>
-                <div class="col-span-2">
+                <div class="col-span-2 animate__animated animate__fadeInDown animate__delay-3s">
                     <h3 class="font-bold text-xl mb-2">Login to your account</h3>
                     <p class="w-3/5">Login with registered account that was announced before.</p>
                 </div>
-                <div>
+                <div class="animate__animated animate__fadeInDown animate__delay-5s">
                     <h3 class="font-bold text-xl mb-2">Watch the Result</h3>
                     <p>After submit your vote, wait until the election progress done and enjoy the result.</p>
                 </div>
@@ -51,12 +52,12 @@
             </div>
             <div class="grid grid-cols-5 mt-10">
                 <div></div>
-                <div>
+                <div class="animate__animated animate__fadeInUp animate__delay-2s">
                     <h3 class="font-bold text-xl mb-2">Observe the Candidates</h3>
                     <p>Go to the 'our candidates' page, and observe the details.</p>
                 </div>
                 <div></div>
-                <div class="ml-8">
+                <div class="ml-8 animate__animated animate__fadeInUp animate__delay-4s">
                     <h3 class="font-bold text-xl mb-2">Do the Vote!</h3>
                     <p>Choose your best candidates, and click vote.</p>
                 </div>
