--- a/public/result.html
+++ b/public/result.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../transition.css"/>
     <title>Voting Online</title>
 </head>
 <body>
     <div id="result">
         <div class="absolute top-0 left-1/4">
-            <img src="../assets/pictures/square8.png" alt="Square 1" class="w-3/5">
+            <img src="../assets/pictures/square8.png" alt="Square 1" class="w-3/5 animate__animated animate__fadeIn">
         </div>
         <div class="container mx-auto pt-12 2xl:pt-24 pb-1 px-32 mt-16">
             <div class="flex justify-end">
                 <a href="vote.html"><img src="../assets/pictures/next.png" alt="Next" class="hover:scale-105 transform transition-all cursor-pointer"></a>
             </div>
             <div class="grid grid-cols-2 gap-4">
-                <div>
+                <div class="animate__animated animate__fadeInLeft">
                     <h1 class="text-5xl font-bold mb-6">Thanks for your <span class="text-red-600">participation</span>!</h1>
                     <p class="text-md font-light">We will wait until the election done.</p>
                     <div class="flex border mt-24 mb-4 p-6 2xl:p-8 w-1/3 h-1/6 rounded-lg mx-8 bg-white">
@@ -27,7 +28,7 @@
                     </div>
                     <p>Vote have been entered.</p>
                 </div>
-                <div class="overflow-hidde">
+                <div class="overflow-hidden animate__animated animate__fadeInRight">
                     <canvas class="p-10 " id="chartDoughnut"></canvas>
                   </div>
                 <p>*We serve the realtime result.</p>
