--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="transition.css">
     <title>Voting Online</title>
 </head>
     <body>
@@ -16,20 +17,17 @@
                         <a href="index.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600 cursor-pointer">Home</h3></a>
                         <a href="public/candidates1.html"><h3 class="p-1  hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
                         <a href="public/howtovote.html"><h3 class="p-1 hover:text-red-600 cursor-pointer">How to Vote</h3></a>
-                        <a href="public/vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
-                    </div>
-                    <div>
-                        <a href="public/login.html"><h3 class="p-1 text-gray-300 underline font-light hover:text-gray-500 cursor-pointer transition-all">Login</h3></a>
+                        <a href="public/login.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
                     </div>
                 </nav>
                 <div class="py-12">
                     <div class="flex justify-between">
-                        <div class="w-2/3">
+                        <div class="w-2/3 animate__animated animate__fadeInLeft">
                             <h1 class="text-7xl font-bold">Welcome to our</h1>
                             <h1 class="text-7xl mt-3 font-bold text-red-600">Voting <span class="text-black">Platform.</span></h1>
                             <h1 class="text-4xl mt-10 font-light">5 Region. One Leader</h1>
                         </div>
-                        <div class="w-1/3 space-y-6">
+                        <div class="w-1/3 space-y-6 animate__animated animate__fadeInRight">
                             <h3 class="text-right text-xl font-light">Alam Sutra</h3>
                             <h3 class="text-right text-xl font-light">Jakarta</h3>
                             <h3 class="text-right text-xl font-light">Bekasi</h3>
@@ -40,10 +38,10 @@
                 </div>
             </div>
             <div class="flex">
-                <img src="assets/pictures/rectangles1.jpg" alt="rectangles 1" class="h-44 2xl:h-64 w-auto">
+                <img src="assets/pictures/rectangles1.jpg" alt="rectangles 1" class="h-44 2xl:h-64 w-auto animate__animated animate__fadeInLeft">
                 <div class="flex absolute h-2/5 2xl:bottom-0 left-1/4">
-                    <img src="assets/pictures/candidate1.png" alt="candidates 1" class="w-auto">
-                    <img src="assets/pictures/candidate2.png" alt="candidates 2" class="w-auto">
+                    <img src="assets/pictures/candidate1.png" alt="candidates 1" class="w-auto animate__animated animate__fadeInUp animate__delay-1s">
+                    <img src="assets/pictures/candidate2.png" alt="candidates 2" class="w-auto animate__animated animate__fadeInUp animate__delay-1s">
                 </div>
             </div>
         </div>
