--- a/public/candidates1.html
+++ b/public/candidates1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../transition.css"/>
     <title>Voting Online</title>
 </head>
     <body>
@@ -15,21 +16,21 @@
                     <a href="../index.html"><h3 class="p-1 hover:text-red-600  cursor-pointer">Home</h3></a>
                     <a href="candidates1.html"><h3 class="p-1 text-red-600 font-bold hover:text-red-600 cursor-pointer">Our Candidate</h3></a>
                     <a href="howtovote.html"><h3 class="p-1 hover:text-red-600 cursor-pointer">How to Vote</h3></a>
-                    <a href="vote.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
+                    <a href="login.html"><button class="bg-red-200 text-red-600 my-1 px-6 font-bold rounded-md cursor-pointer">Vote</button></a>
                 </nav>
-                <div class="absolute left-2/3 top-18">
+                <div class="absolute left-2/3 top-18 animate__animated animate__fadeInRight">
                     <div class="space-y-4">
                         <h1 class="text-right text-6xl font-bold">Gede Dyava</h1>
                         <h2 class="text-right text-red-600 italic text-3xl font-light">Binus Kemanggisan</h2>
                     </div>
                 </div>
-                <div class="flex absolute bottom-0 left-1/3 2xl:right-1/4 2xl:left-auto w-auto h-4/6">
+                <div class="flex absolute bottom-0 left-1/3 2xl:right-1/4 2xl:left-auto w-auto h-4/6 animate__animated animate__fadeInLeft">
                     <img src="../assets/pictures/candidate1.png" alt="candidates 1">
                 </div>
-                <div class="flex absolute bottom-1/3 right-0 w-auto h-36 2xl:h-auto">
+                <div class="flex absolute bottom-1/3 right-0 w-auto h-36 2xl:h-auto animate__animated animate__fadeInRight">
                     <img src="../assets/pictures/square1.png" alt="rectangles 2">
                 </div>
-                <div class="absolute w-5/6 top-28 2xl:top-1/4">
+                <div class="absolute w-5/6 top-28 2xl:top-1/4 animate__animated animate__fadeInLeft">
                     <h3 class="text-2xl font-bold">The Candidates</h3>
                     <div class="py-2 px-2 space-x-4">
                         <a href="candidates1.html"><button class="bg-red-600 h-14 w-14 rounded-full text-white text-3xl font-bold">1</button></a>
@@ -50,7 +51,7 @@
                         </ol>
                     </div>
                 </div>
-                <div class="absolute right-1/2 pr-16 bottom-1/4 cursor-pointer">
+                <div class="absolute right-1/2 pr-16 bottom-1/4 cursor-pointer animate__animated animate__fadeInUp animate__delay-1s">
                     <p class="text-center mb-2">Play</p>
                     <img src="../assets/pictures/play-btn.png" alt="Play Button" class="hover:scale-110 transform transition-all">
                 </div>
