--- a/public/vote.html
+++ b/public/vote.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../transition.css"/>
     <title>Voting Online</title>
 </head>
 <body>
     <div id="vote">
         <div class="absolute top-0 left-1/4">
-            <img src="../assets/pictures/square6.png" alt="Square 1" class="w-3/5">
+            <img src="../assets/pictures/square6.png" alt="Square 1" class="w-3/5 animate__animated animate__fadeInDown">
         </div>
         <div class="container mx-auto pt-12 2xl:pt-24 pb-1 px-32 mt-10">
             <nav>
                 <a href="../index.html"><p class="text-right text-sm underline text-gray-400 font-light cursor-pointer hover:text-gray-600 transition-all">Log Out</p></a>
             </nav>
-            <div class="space-y-2">
+            <div class="space-y-2 animate__animated animate__fadeInDown">
                 <h1 class="text-4xl font-bold text-center">Hello, <span class="text-red-600">Charles</span>!</h1>
                 <p class="text-center">After you observe the candidates. Now it's the time!</p>
             </div>
             <div class="grid grid-cols-4 mt-8 gap-4">
                 <div>
-                    <div class="space-y-3">
+                    <div class="space-y-3 animate__animated animate__fadeInLeft animate__delay-1s">
                         <h1 class="font-bold text-3xl text-right">Our Vision</h1>
                         <p class="text-right">"We are dedicated to a continuing tradition of excellence in an ever-changing world."</p>
                     </div>
-                   <div class="space-y-3 mt-4">
+                   <div class="space-y-3 mt-4 animate__animated animate__fadeInLeft animate__delay-2s">
                     <h1 class="font-bold text-3xl text-right">Our Mission</h1>
                     <ol class="list-decimal text-right" style="list-style-position: inside;">
                         <li>To provide an educational program that develops student's curiosity.</li>
@@ -36,7 +37,7 @@
                     </ol>
                    </div>
                 </div>
-                <div>
+                <div class="animate__animated animate__fadeIn ">
                     <div class="border mx-4 border-black py-1 bg-gray-800 opacity-80">
                         <h1 class="text-center font-bold text-white text-2xl">1</h1>
                     </div>
@@ -47,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="animate__animated animate__fadeIn">
                     <div class="border mx-4 py-1 border-black bg-gray-800 opacity-80">
                         <h1 class="text-center font-bold text-white text-2xl">2</h1>
                     </div>
@@ -59,11 +60,11 @@
                     </div>
                 </div>
                 <div>
-                    <div class="space-y-3">
+                    <div class="space-y-3 animate__animated animate__fadeInRight animate__delay-1s">
                         <h1 class="font-bold text-3xl">Our Vision</h1>
                         <p>"Our aim is to support learners in becoming curious, reflective and critical in their thinking as global citizens."</p>
                     </div>
-                   <div class="space-y-3 mt-4">
+                   <div class="space-y-3 mt-4 animate__animated animate__fadeInRight animate__delay-2s">
                         <h1 class="font-bold text-3xl">Our Mission</h1>
                         <ol class="list-decimal" style="list-style-position: inside;">
                             <li>To build each student's resilience.</li>
@@ -73,7 +74,7 @@
                    </div>
                 </div>
             </div>
-            <div class="grid grid-cols-4 gap-4">
+            <div class="grid grid-cols-4 gap-4 animate__animated animate__fadeInUp">
                 <div></div>
                 <div class="space-y-3">
                     <h1 class="text-2xl 2xl:text-4xl font-bold text-center">Gede Savitra</h1>
@@ -85,12 +86,12 @@
                 </div>
                 <div></div>
             </div>
-            <div class="flex justify-center mt-20">
+            <div class="flex justify-center mt-20 animate__animated animate__fadeInUp animate__delay-3s">
                 <a href="double-check.html"><button class="bg-red-200 cursor-pointer py-2 px-16 uppercase font-bold text-xl text-red-600 rounded-lg hover:bg-red-300 transition-all">Vote</button></a>
             </div>
         </div>
         <div class="mt-20 flex justify-end mr-40">
-            <img src="../assets/pictures/square7.png" alt="Square 7" class="w-40">
+            <img src="../assets/pictures/square7.png" alt="Square 7" class="w-40 animate__animated animate__fadeInUp">
         </div>
     </div>
 </body>
