Fixing Vote.Html

--- a/public/vote.html
+++ b/public/vote.html
@@ -41,8 +41,8 @@
                     <div class="border mx-4 border-black py-1 bg-gray-800 opacity-80">
                         <h1 class="text-center font-bold text-white text-2xl">1</h1>
                     </div>
-                    <div class="mx-4 border-black border cursor-pointer h-3/4 overflow-hidden relative">
-                        <img src="../assets/pictures/candidate1_2.png" alt="Candidate 1" class="w-full h-full pt-20 opacity-80 hover:scale-110 hover:opacity-100 transform transition-all">
+                    <div class="mx-4 border-black border cursor-pointer h-3/4 overflow-hidden relative flex justify-center">
+                        <img src="../assets/pictures/candidate1_2.png" alt="Candidate 1" class="absolute bottom-0 opacity-80 hover:scale-110 hover:opacity-100 transform transition-all">
                         <div class="bg-red-600 py-4 w-full bottom-0 absolute">
                             <p class="text-center text-white font-light text-sm">selected</p>
                         </div>
@@ -52,8 +52,8 @@
                     <div class="border mx-4 py-1 border-black bg-gray-800 opacity-80">
                         <h1 class="text-center font-bold text-white text-2xl">2</h1>
                     </div>
-                    <div class="mx-4 border border-black cursor-pointer h-3/4 overflow-hidden relative">
-                        <img src="../assets/pictures/candidate2_2.png" alt="Candidate 2" class="w-full h-full pt-28 opacity-80 hover:scale-110 hover:opacity-100 transform transition-all">
+                    <div class="mx-4 border border-black cursor-pointer h-3/4 overflow-hidden relative flex justify-center">
+                        <img src="../assets/pictures/candidate2_2.png" alt="Candidate 2" class="absolute bottom-0 opacity-80 hover:scale-110 hover:opacity-100 transform transition-all">
                         <div class="bg-red-600 py-4 w-full bottom-0 absolute opacity-0">
                             <p class="text-center text-white font-light text-sm">selected</p>
                         </div>
